@@ -48,6 +48,7 @@ $callbackScalar = '\\Brainworxx\\Krexx\\Analyse\\Callback\\Analyse\\Scalar\\';
 $caller = '\\Brainworxx\\Krexx\\Analyse\\Caller';
 
 AbstractTest::defineFunctionMock($analyseRoutingProcess, 'class_exists');
+AbstractTest::defineFunctionMock($analyseRoutingProcess, 'is_object');
 AbstractTest::defineFunctionMock($serviceFlow, 'ini_get');
 AbstractTest::defineFunctionMock($serviceFlow, 'time');
 AbstractTest::defineFunctionMock($serviceFlow, 'memory_get_usage');
