@@ -1,4 +1,5 @@
 4.1.9
+- Added Support for the PHP 8 cUrl handle class.
 
 4.1.8
 - Added support for PHP 8.2.
